fix scrollbar

--- a/src/timepicker/styles/main.scss
+++ b/src/timepicker/styles/main.scss
@@ -1,3 +1,6 @@
+body {
+  height: 2000px;
+}
 .timepicker-ui {
   &-normalize {
     box-sizing: content-box !important;
